# B2B-Pulse

./: .env.example  .gitignore  README.md  Social Engagement Automation Tool.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_org_invites.py  003_add_indexes_and_constraints.py  004_teams_linkedin_auth_superadmin.py  005_poll_status_persistent.py  006_integration_linkedin_fields.py  007_engagement_retry_fields.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/api/: __init__.py  admin.py  audit.py  auth.py  automation.py  integrations.py  org.py  teams.py  tracked_pages.py  users.py  webhooks.py
backend/app/automation/: browser_manager.py  facebook_actions.py  instagram_actions.py  linkedin_actions.py
backend/app/core/: dependencies.py  exceptions.py  linkedin_oauth.py  locks.py  oauth_state.py  security.py
backend/app/models/: __init__.py  engagement.py  integration.py  invite.py  org.py  post.py  team.py  tracked_page.py  user.py
backend/app/schemas/: admin.py  auth.py  engagement.py  invite.py  team.py  tracked_page.py  user.py
backend/app/services/: comment_generator.py  facebook_service.py  instagram_service.py  linkedin_api.py  linkedin_service.py  meta_client.py  polling_service.py  token_service.py  url_utils.py
backend/app/workers/: celery_app.py  engagement_tasks.py  polling_tasks.py  session_monitor.py  stale_actions.py
backend/tests/: conftest.py  test_auth.py  test_automation_settings.py  test_comment_generator.py  test_facebook_service.py  test_instagram_service.py  test_linkedin_service.py  test_webhooks.py
docs/: SETUP.md
frontend/: Dockerfile.prod  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  railway.toml  tailwind.config.js  tsconfig.tsbuildinfo
nginx/: nginx.conf
scripts/: backup_db.sh  deploy.sh
(+29 files in other folders)
