[project]
name = "autoengage-backend"
version = "0.1.0"
description = "AutoEngage - Social Engagement Automation Tool"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",

    # Background jobs
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "cryptography>=43.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Browser automation
    "playwright>=1.48.0",

    # Settings
    "pydantic-settings>=2.5.0",
    "pydantic[email]>=2.9.0",

    # Production server
    "gunicorn>=22.0.0",

    # Monitoring (optional — only used if SENTRY_DSN is set)
    "sentry-sdk[fastapi,celery]>=2.0.0",

    # Utilities
    "python-multipart>=0.0.12",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "UP042",  # str+Enum → StrEnum — breaks SQLAlchemy values_callable pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
